add swagPutVarBoolToTrue
